# oss

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  Makefile  README-draft-v2.md  README-draft.md  README.md  pyproject.toml
.calx/: .gitignore  README  calx.db  calx.json  server.json
.calx/method/: dispatch.md  how-we-document.md  orchestration.md  review.md
.calx/rules/: tests.md
.claude/: settings.json
docs/: concepts.md  correction-workflow.md  hooks.md  mcp-reference.md  quickstart.md  upgrading.md
src/calx/: __init__.py  __main__.py
src/calx/capture/: AGENTS.md  __init__.py  explicit.py  recovery.py  session_end.py
src/calx/cli/: AGENTS.md  __init__.py  _http.py  board_cmd.py  compilations_cmd.py  config_cmd.py  correct.py  dispatch_cmd.py  distill.py  health.py  hook_cmd.py  init_cmd.py  main.py  plan_cmd.py  promote_cmd.py  review_cmd.py  rules_cmd.py  serve_cmd.py  stats.py  status.py  sync_cmd.py  telemetry_cmd.py
src/calx/core/: AGENTS.md  agents_md.py  config.py  corrections.py  events.py  ids.py  integrity.py  phone_home.py  rules.py  state.py  telemetry.py  update_check.py
src/calx/dispatch/: AGENTS.md  __init__.py  generator.py  review.py
src/calx/distillation/: AGENTS.md  __init__.py  promotion.py  recurrence.py  review.py  similarity.py
src/calx/health/: AGENTS.md  __init__.py  conflicts.py  conversion.py  coverage.py  dedup.py  floor.py  scoring.py  staleness.py
src/calx/hooks/: AGENTS.md  __init__.py  installer.py
src/calx/hooks/templates/: collapse_guard.sh  enforce.sh  orientation_gate.sh  session_end.sh  session_start.sh
src/calx/serve/: __init__.py  config.py  init.py  server.py
src/calx/serve/db/: engine.py  migrate.py  schema.py  sqlite.py
src/calx/serve/enforcement/: http_app.py
src/calx/serve/engine/: bootstrap.py  health.py  (+14 more)
src/calx/templates/: AGENTS.md  __init__.py  calx_readme.py  claude_md_scaffold.py  method_docs.py
tests/: AGENTS.md  conftest.py  test_integration.py
tests/capture/: test_explicit.py  test_recovery.py  test_session_end.py
tests/cli/: __init__.py  test_config.py  test_correct.py  test_dispatch.py  test_distill.py  test_health.py  test_hook.py  test_init.py  test_stats.py  test_status.py  test_sync.py
tests/core/: test_agents_md.py  test_config.py  test_corrections.py  test_events.py  test_ids.py  test_integrity.py  test_phone_home.py  test_rules.py  test_state.py  test_telemetry.py
tests/dispatch/: test_generator.py  test_review.py
tests/distillation/: test_promotion.py  test_recurrence.py  test_review.py  test_similarity.py
tests/health/: __init__.py  test_conflicts.py  test_conversion.py  test_coverage.py  test_dedup.py  test_floor.py  test_scoring.py  test_staleness.py
tests/hooks/: test_installer.py
tests/serve/: conftest.py  test_server.py
tests/serve/db/: test_dataclass_roundtrip.py  test_fk_enforcement.py  test_migrate.py  test_migrations.py  test_plan_roundtrip.py  test_schema.py  test_schema_contract.py  test_sessions.py  test_sqlite.py
tests/serve/engine/: test_bootstrap.py  test_compilation.py  test_conflict_detection.py  test_correction_engine.py  test_health.py  test_learning_mode.py  test_orchestration_engine.py  test_promotion.py  test_quarantine.py  test_recurrence.py  test_similarity.py  test_state_writer.py  test_telemetry.py
tests/serve/hooks/: test_common.py  test_enforce.py  test_session_end.py  test_session_start.py
tests/serve/resources/: test_board.py  test_briefing.py  test_corrections.py  test_rules.py
tests/serve/tools/: test_compile_rule.py  test_create_plan.py  test_deactivate_rule.py  test_dispatch_chunk.py  test_end_session.py  test_log_correction.py  test_promote_correction.py  test_record_foil_review.py  test_redispatch_chunk.py  test_register_session.py  test_update_board.py  test_update_plan.py  test_verify_wave.py
tests/templates/: test_calx_readme.py  test_claude_md_scaffold.py  test_method_docs.py
(+36 files in other folders)
