[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getcalx"
version = "0.5.1"
description = "Behavioral governance compiler for AI agents. Compile corrections into enforceable mechanisms over MCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Spencer Hardwick"}
]
keywords = ["ai", "agents", "mcp", "behavioral-governance", "corrections"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "fastmcp>=3.1,<4",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
calx = "calx.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calx = ["hooks/templates/*.sh"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
