[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getcalx"
dynamic = ["version"]
description = "DEPRECATED: Calx has moved to a cloud-hosted model. Visit calx.sh for the new setup."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Spencer Hardwick"}
]
keywords = ["ai", "agents", "mcp", "behavioral-governance", "deprecated"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
]

[project.scripts]
calx = "calx.cli.main:cli"

[tool.setuptools.dynamic]
version = {attr = "calx.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
